[tool.poetry]
name = "rapid-photo-downloader"
version = "0.9.33"
description = "Downloads, renames and backs up photos and videos from cameras, phones, memory cards and other devices"
authors = ["Damon Lynch"]
license = "GPL 3+"

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.15.6"
psutil = ">=3.4.2"
gphoto2 = ">=1.8.0"
pyzmq = ">=16.0.2"
pyxdg = ">=0.25"
arrow = ">=0.9.0"
python-dateutil = ">=2.7"
PyPrind = ">=2.9.4"
colorlog = ">=2.6"
easygui = ">=0.98.1"
colour = "^0.1.5"
pymediainfo = ">=2.2.0"
sortedcontainers = "^2.4.0"
requests = "^2.27.1"
tornado = "^6.1"
tenacity = "^8.0.1"
Pillow = ">=5.1.0"
Babel = "^2.9.1"
show-in-file-manager = ">=1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
